# robot-arm

./: .github  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pull-request-message.md  pull-request-startup-scripts.md  pyproject.toml  robot-arm.py
archive/imu/: __init__.py  sensor_models.py
archive/operator_tracker/: README.md
archive/teleop_bt/: __init__.py  network_packet.py
config/: operator_arm.yaml  pins.yaml  robot.yaml  teleop.yaml
cpp/: README.md
cpp/src/: ErrorStatus.cpp  ErrorStatus.h
docs/: bluetooth-setup.md  data-hierarchy.md  file-hierarchy.md  program-overview.md  roboterrorcheck_tests.md  safety.md  setup.md  wiring.md
examples/: smoke_test.py
progress-doc/: issue-review-roboterrorcheck.md  project-context.md  pull-request-description.md  quick-reference.md  refactor-summary.md
progress-doc-manual/: implementation-checklist.md
progress-doc-wifi/: cleanup-summary.md  teleoperation-wifi.md  teleoperation.md  wifi-instructions.md  wifi-knowledge.md
progress-doc/issues/: issue-review-roboterrorcheck-_are_numbers.md  issue-review-roboterrorcheck-_cubic_time_scaling.md  issue-review-roboterrorcheck-_dh_matrix.md  issue-review-roboterrorcheck-_identity_4x4.md  issue-review-roboterrorcheck-_matmul.md  issue-review-roboterrorcheck-_matrix_close.md  issue-review-roboterrorcheck-_triangle_inequality.md  issue-review-roboterrorcheck-io_validation-command_channel_validation-test_instruction_ordering.md  issue-review-roboterrorcheck-io_validation-command_channel_validation-test_instruction_schema.md  issue-review-roboterrorcheck-io_validation-command_channel_validation-test_instruction_value_ranges.md  issue-review-test_run-_FakePose--init-.md  issue-review-test_run-_run.md  (+21 more)
python3/: README.md  requirements.txt
ros2/: package.xml  setup.cfg  setup.py
ros2/rviz/: telearm.rviz
ros2/telearm_ros2/: joint_state_bridge.py
scripts/: scripts-doc.md  setup_bluetooth_pi.sh  start_telearm.sh  telearm-bluetooth.service
telearm/: __init__.py  cli.py  control.py  ik.py  imu_fusion.py  kinematics.py  models.py  sensors.py  trajectory.py
telearm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
telearm_ros2/: __init__.py  package.xml
telearm_ros2/launch/: telearm_rviz.launch.py
telearm_ros2/telearm_ros2/: joint_state_bridge.py
telearm_ros2/urdf/: telearm.urdf
tests/: roboterrorcheck.py  test_bluetooth.py  test_control.py  test_ik.py  test_kinematics.py  test_models.py  test_run.py  test_serial.py  test_teleoperation.py  test_trajectory.py
(+25 files in other folders)
