[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telearm"
version = "0.1.0"
description = "5-DOF robot arm control with kinematics and trajectory planning"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["telearm*"]
exclude = ["tests*", "docs*", "config*", "firmware*", "ros2*", "cpp*", "examples*"]

[project.optional-dependencies]
hardware = ["pyserial>=3.5"]
teleop = ["pyserial>=3.5", "scipy>=1.7.0", "evdev>=1.4.0"]
ros2 = ["rclpy"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pre-commit",
    "black",
    "ruff",
]

[project.scripts]
telearm = "telearm.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
